<resources>
    <string name="app_name">"Game's Debrief "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generarReporte">Crear informe de partida</string>
    <string name="añadirJuego">Añada un juego nuevo</string>
    <string name="estadisticas">Ver estadisticas</string>
    <string name="labelJuegos">Seleccione un juego</string>
    <string name="labelSwitchJugador">Seleccion el tipo de partida</string>
    <string name="labelModos">Seleccione un modo de juegos</string>
    <string name="rellenaPartida">Completa el informe</string>
    <string name="esUnSoloJugador">Un jugador</string>
    <string name="jugadoresTotal">Jugadores Totales</string>
    <string name="jugadoresAliados">Jugadores en tu bando</string>
    <string name="jugadoresEnemigos">Jugadores en el bando enemigo</string>
    <string name="descripcion">Introduce aqui los acontecimientos de la partida</string>
    <string name="resultadoPartida">Resultado partida</string>
    <string name="salvarInforme">Salvar el informe</string>
    <string name="falta">Faltan los siguientes datos en el informe:</string>
    <string name="labelMapas">Seleccione un mapa</string>
    <string name="añadirNombre">Añada</string>
    <string name="añadirNuevoNombre">Añada otro más</string>
    <string name="noHacerNada">Volver</string>
    <string name="nombreJuegonuevo">Nombre juego nuevo</string>
    <string name="juego">Juegos</string>
    <string name="genero">Generos</string>
    <string name="modo">Modos</string>
    <string name="muestraEstadisticas">Estadisticas</string>
    <string name="mapa">Mapas</string>
    <string name="partidasPerdidas">Partidas Perdidas</string>
    <string name="partidasEmpatadas">Partidas Empatadas</string>
    <string name="partidasGanadas">Partidas Ganadas</string>
</resources>
