<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:id="@+id/añadirNombre"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:text="@string/añadirNombre"
            android:layout_weight="10"/>
        <Button
            android:id="@+id/añadirNuevoNombre"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:text="@string/añadirNuevoNombre"
            android:layout_weight="15"/>
        <Button
            android:id="@+id/noHacerNada"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:text="@string/noHacerNada"
            android:layout_weight="10"/>
    </LinearLayout>
</LinearLayout>