<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuPrincipal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ies.nervion.jorge.gamesdebrief.fragments.MenuPrincipal">
    <Button
        android:id="@+id/generarReporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generarReporte"
        android:gravity="top"
        android:layout_above="@+id/añadirJuego"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/añadirJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadirJuego"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/generarReporte"
        android:layout_alignRight="@+id/generarReporte" />
    <Button
        android:id="@+id/estadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadisticas"
        android:layout_below="@id/añadirJuego"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/añadirJuego"
        android:layout_alignRight="@+id/añadirJuego" />

    </RelativeLayout>
