<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/estadisticas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jorge.gamesdebrief.fragments.Estadisticas">
    <LinearLayout
        android:id="@+id/linearContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:text="@string/juego"
                android:textAlignment="center"
                android:layout_weight="5"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textAlignment="center"
                android:layout_weight="5"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:text="@string/modo"
                android:textAlignment="center"
                android:layout_weight="5"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/muestraJuegos"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
            <Spinner
                android:id="@+id/muestraGeneros"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
            <Spinner
                android:id="@+id/muestraModos"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/muestraEstadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muestraEstadisticas"
        android:layout_below="@id/linearContainer"
        android:layout_centerHorizontal="true"/>
    <GridView
        android:id="@+id/estadisticasGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/muestraEstadisticas"
        android:numColumns="4"/>
</RelativeLayout>
