<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addJuego"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Addjuego">
    <TextView
        android:id="@+id/nombreJuegoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreJuegonuevo"
        android:layout_alignBaseline="@+id/nombreJuego"
        android:layout_alignBottom="@+id/nombreJuego"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/nombreJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/nombreJuegoLabel"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:id="@+id/linearSpinner"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreJuego">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:text="@string/genero"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:text="@string/mapa"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:text="@string/modo"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
            <Spinner
                android:id="@+id/nuevoMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
            <Spinner
                android:id="@+id/nuevoModo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/añadirJuegoNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadirJuego"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:id="@+id/linearView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearSpinner"
        android:layout_above="@id/añadirJuegoNuevo">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textAlignment="center"
            android:text="@string/mapa"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textAlignment="center"
            android:text="@string/modo"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/listMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
        <ListView
            android:id="@+id/listModo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
